--- a/card-creator.html
+++ b/card-creator.html
@@ -12,6 +12,33 @@
   <main class="left-right">
     <section id="form-area">
       <!-- YOUR CODE HERE -->
+      <form class="card-form">
+        <div class="form-group">
+          <label for="to">To</label>
+          <input type="text" id="to" name="to" placeholder="Enter recipient">
+        </div>
+        <div class="form-group">
+          <label for="from">From</label>
+          <input type="text" id="from" name="from" placeholder="Enter sender">
+        </div>
+        <div class="form-group">
+          <label for="to">Title</label>
+          <input type="text" id="title" name="title" placeholder="Enter title">
+        </div>
+        <div class="form-group">
+          <label for="to">Subtitle</label>
+          <input type="text" id="subtitle" name="subtitle" placeholder="Enter subtitle">
+        </div>
+        <div class="form-group">
+          <label for="to">Message</label>
+          <textarea type="text" id="message" name="message" placeholder="Enter message">
+            </textarea>
+        </div>
+        <div class="form-buttons">
+          <button type="button" id="preview" value="Preview">Preview</button>
+            <button type="submit" id="save" value="Save">Save</button>
+        </div>
+      </form>
     </section>
     <section id="preview-area">
       <div class="card-display">
