--- a/card-creator.html
+++ b/card-creator.html
@@ -31,8 +31,7 @@
         </div>
         <div class="form-group">
           <label for="to">Message</label>
-          <textarea type="text" id="message" name="message" placeholder="Enter message">
-            </textarea>
+          <textarea type="text" id="message" name="message" placeholder="Enter message"></textarea>
         </div>
         <div class="form-buttons">
           <button type="button" id="preview" value="Preview">Preview</button>
